# GameOfLife

./: CMakeLists.txt
res/shaders/: shd.fs  textures.fs
source/: main.cpp
source/GmOb/: tiles.cpp  tiles.h
source/Renderer/: ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h
